--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -25,6 +25,7 @@
     "@langchain/ollama": "^0.2.0",
     "@langchain/openai": "^0.5.4",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@types/pdfjs-dist": "^2.10.377",
     "@vicons/antd": "^0.13.0",
     "@vicons/carbon": "^0.13.0",
     "@vicons/ionicons5": "^0.13.0",
@@ -34,6 +35,7 @@
     "katex": "^0.16.22",
     "langchain": "^0.3.20",
     "marked": "^15.0.11",
+    "pdfjs-dist": "^5.2.133",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "vue": "^3.3.0",
