--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -31,6 +31,7 @@
     "cross-fetch": "^4.1.0",
     "dompurify": "^3.2.5",
     "electron-updater": "^6.6.2",
+    "js-sha3": "^0.9.3",
     "katex": "^0.16.22",
     "langchain": "^0.3.20",
     "marked": "^15.0.11",
