--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -28,6 +28,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@vicons/antd": "^0.13.0",
     "@vicons/carbon": "^0.13.0",
+    "@vicons/fluent": "^0.13.0",
     "@vicons/ionicons5": "^0.13.0",
     "cross-fetch": "^4.1.0",
     "dompurify": "^3.2.5",
