--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -37,6 +37,7 @@
     "katex": "^0.16.22",
     "langchain": "^0.3.20",
     "marked": "^15.0.11",
+    "openai": "^5.7.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "vue": "^3.3.0",
