--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -24,7 +24,7 @@
     "@langchain/community": "^0.3.46",
     "@langchain/core": "^0.3.43",
     "@langchain/ollama": "^0.2.0",
-    "@microsoft/fetch-event-source": "^2.0.1",
+    "@langchain/openai": "^0.5.4",
     "@vicons/antd": "^0.13.0",
     "@vicons/carbon": "^0.13.0",
     "@vicons/fluent": "^0.13.0",
@@ -36,7 +36,6 @@
     "katex": "^0.16.22",
     "langchain": "^0.3.20",
     "marked": "^15.0.11",
-    "openai": "^5.7.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "vue": "^3.3.0",
