--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -61,6 +61,7 @@
     "electron-rebuild": "^3.2.9",
     "eslint": "^8.0.0",
     "eslint-plugin-vue": "^9.0.0",
+    "less": "^4.3.0",
     "naive-ui": "^2.41.0",
     "prettier": "^2.0.0",
     "typescript": "^5.0.0",
