--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -38,6 +38,7 @@
     "langchain": "^0.3.20",
     "marked": "^15.0.11",
     "ollama": "^0.5.16",
+    "spark-md5": "^3.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "vue": "^3.3.0",
@@ -50,6 +51,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.17.28",
+    "@types/spark-md5": "^3.0.5",
     "@vicons/material": "^0.13.0",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/devtools": "^7.7.2",
@@ -65,6 +67,7 @@
     "less": "^4.3.0",
     "naive-ui": "^2.41.0",
     "prettier": "^2.0.0",
+    "sass": "^1.89.2",
     "typescript": "^5.0.0",
     "vite": "^4.5.11",
     "vite-plugin-electron": "^0.11.0",
