--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -31,13 +31,17 @@
     "@vicons/fluent": "^0.13.0",
     "@vicons/ionicons5": "^0.13.0",
     "cross-fetch": "^4.1.0",
+    "docxtemplater": "^3.65.1",
     "dompurify": "^3.2.5",
     "electron-updater": "^6.6.2",
     "js-sha3": "^0.9.3",
     "katex": "^0.16.22",
     "langchain": "^0.3.20",
+    "mammoth": "^1.9.1",
     "marked": "^15.0.11",
+    "mobi": "^0.0.1",
     "ollama": "^0.5.16",
+    "pptxtojson": "^1.5.0",
     "spark-md5": "^3.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
@@ -45,7 +49,8 @@
     "vue-element-plus-x": "^1.2.0",
     "vue-i18n": "^9.2.2",
     "vue-pdf-embed": "^2.1.2",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@electron-toolkit/utils": "^4.0.0",
