--- a/bytecubpdf/package.json
+++ b/bytecubpdf/package.json
@@ -41,6 +41,7 @@
     "marked": "^15.0.11",
     "mobi": "^0.0.1",
     "ollama": "^0.5.16",
+    "pinia": "^3.0.3",
     "pptxtojson": "^1.5.0",
     "spark-md5": "^3.0.2",
     "sqlite": "^5.1.1",
