chore: 增加node内存限制配置

--- a/bytecubpdf/.npmrc
+++ b/bytecubpdf/.npmrc
@@ -1,3 +1,4 @@
 electron_mirror=https://npmmirror.com/mirrors/electron/
 # proxy=http://127.0.0.1:7897
 # https-proxy=http://127.0.0.1:7897
+node-options="--max-old-space-size=8192"
